syntax = "proto3";
package gameproto;

import "commproto/comm.proto";

message HelloReq {
    string name = 1;
}

message HelloResp {
    string message = 1;
}

message CrudUseItemReq {
    commproto.ItemList Items = 1;
}

message CrudUseItemResp {
    map<int32, commproto.ItemList> ChangeItems = 1;
}

message ChatMessage {
    string From = 1;
    string Content = 2;
    int64 Time = 3;
    string Channel = 4;
    map<string, string> Meta = 5; // 自定义描述结构（工会名，地域，称号 ？
}

message ChatAddChannelReq {
    repeated string Channels = 1;
}

message ChatAddChannelResp {
    repeated string CurChannels = 1;
}

message ChatRmvChannelReq {
    repeated string Channels = 1;
}

message ChatRmvChannelResp {
    repeated string CurChannels = 1;
}

message ChatSendReq {
    ChatMessage msg = 1;
}

message ChatMessageNotify {
    repeated ChatMessage msglst = 1;
}

message ChatSendResp {

}